<resources>
    <string name="app_name">Lesson2</string>
    <string name="tv_0">0</string>
    <string name="str_tw_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_dec">-</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_sum">+</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="b_c">c</string>
    <string name="button_0">0</string>
    <string name="button_point">.</string>
    <string name="button_r">=</string>
    <string name="button_m">*</string>
    <string name="button_del">/</string>
    <string name="button_delete">d</string>
    <string name="button_proc">%</string>
</resources>